--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-C:\Code\Projects\TrailCamSorter\startfolder\
-C:\Code\Projects\TrailCamSorter\startfoldermaster\
+C:/Code/Projects/TrailCamSorter/startfolder/
+C:/Code/Projects/TrailCamSorter/startfoldermaster/
